kubernetes/apps/default/homarr/app/public-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newtab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ${SECRET_PUBLIC_DOMAIN1}
spec:
  ingressClassName: traefik-public
  rules:
  - host: &host newtab.${SECRET_PUBLIC_DOMAIN1}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: homarr
            port:
              number: 7575
  tls:
    - hosts:
        - *host
      secretName: newtab-${SECRET_PUBLIC_DOMAIN1//./-}-tls
